--- a/index.html
+++ b/index.html
@@ -41,24 +41,24 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="./Images/CNY03.png" class="d-block w-100" alt="...">
+      <img src="./Images/FL15.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
+        <!-- <h5>First slide label</h5> -->
+        <!-- <p>Some representative placeholder content for the first slide.</p> -->
       </div>
     </div>
     <div class="carousel-item">
       <img src="./Images/ARP06.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Some representative placeholder content for the second slide.</p>
+        <!-- <h5>Second slide label</h5> -->
+        <!-- <p>Some representative placeholder content for the second slide.</p> -->
       </div>
     </div>
     <div class="carousel-item">
-      <img src="./Images/FL15.png" class="d-block w-100" alt="...">
+      <img src="./Images/CNY03.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
+        <!-- <h5>Third slide label</h5> -->
+        <!-- <p>Some representative placeholder content for the third slide.</p> -->
       </div>
     </div>
   </div>
@@ -118,7 +118,7 @@
       <div class="card">
         <img src="./Images/FL01.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Fabiano Raizer</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           <a href="#projects-id" class="btn btn-primary">Saiba mais</a>
         </div>
