--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt_BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"> -->
@@ -8,6 +8,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,600;1,100;1,200;1,400;1,600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="icon" type="image/png" href="./Images/logo.png">
+
+    <meta name="Descrição" content="Mix Render Studio é uma empresa especializada em renderizar projetos com o propósito de transformar em fotorrealistas">
+    <meta name="Autor" content="Vitor Tchunwen">
+    <meta property="og:title" content="Mix Render Studio">
+    <meta property="og:url" content="https://vitoretur.github.io/MixRenderStudio/">
+    <meta property="og:image" content="https://vitoretur.github.io/MixRenderStudio/Images/FL15.png">
+
+
+
 
     <title>Mix Render Studio</title>
 </head>
