--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="./Images/logo.png">
 
-    <meta name="Descrição" content="Mix Render Studio é uma empresa especializada em renderizar projetos com o propósito de transformar em fotorrealistas">
-    <meta name="Autor" content="Vitor Tchunwen">
     <meta property="og:title" content="Mix Render Studio">
+    <meta property="og:description" content="Valorizamos seu projeto com imagens realistas!">
     <meta property="og:url" content="https://vitoretur.github.io/MixRenderStudio/">
-    <meta property="og:image" content="https://vitoretur.github.io/MixRenderStudio/Images/FL15.png">
+    <meta property="og:image" content="https://i.imgur.com/cKscds8.jpg">
 
 
 
