--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
     <div class="copyright">
       <p>© 2023 Mix Render Studio - Todos os direitos reservados.</p>
-      <p>Desenvolvido por Vitor Tchunwen</p>
+      <p>Desenvolvido por <a style="text-decoration: dashed; color: #ffcb4d;" target="_blank" href="https://instagram.com/vitor_etur?igshid=MzNlNGNkZWQ4Mg==">Vitor Tchunwen</a></p>
     </div>
 
   </div>
