--- a/index.html
+++ b/index.html
@@ -127,27 +127,60 @@
       <div class="card">
         <img src="./Images/FL01.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Fabiano Raizer</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#projects-id" class="btn btn-primary">Saiba mais</a>
+          <h5 class="card-title">Cliente:</h5>
+          <h5 class="card-title">Fabiano Raizer Interiores</h5>
+          <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+          <a href="#projects-id" class="btn btn-primary">Visualizar</a>
         </div>
       </div>
 
       <div class="card">
         <img src="./Images/FL05.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#projects-id" class="btn btn-primary">Saiba mais</a>
+          <h5 class="card-title">Cliente:</h5>
+          <h5 class="card-title">Julia Lavall | Lagum Arq.</h5>
+          <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+          <a href="#projects-id" class="btn btn-primary">Visualizar</a>
         </div>
       </div>
 
       <div class="card">
         <img src="./Images/FL15.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#projects-id" class="btn btn-primary">Saiba mais</a>
+          <h5 class="card-title">Cliente:</h5>
+          <h5 class="card-title">Arquiteto Edson Reis</h5>
+          <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+          <a href="#projects-id" class="btn btn-primary">Visualizar</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="./Images/FL15.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Cliente:</h5>
+          <h5 class="card-title">Marjana Tortelli</h5>
+          <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+          <a href="#projects-id" class="btn btn-primary">Visualizar</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="./Images/FL15.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Projeto Autoral:</h5>
+          <h5 class="card-title">Mix Render Studio</h5>
+          <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+          <a href="#projects-id" class="btn btn-primary">Visualizar</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="./Images/FL15.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Projeto Autoral:</h5>
+          <h5 class="card-title">Mix Render Studio</h5>
+          <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+          <a href="#projects-id" class="btn btn-primary">Visualizar</a>
         </div>
       </div>
       
@@ -170,8 +203,8 @@
     </div>
 
     <div class="copyright">
-      <p>© 2023 Mix Render Studio - Todos os direitos reservados.</p>
       <p>Desenvolvido por <a style="text-decoration: dashed; color: #ffcb4d;" target="_blank" href="https://instagram.com/vitor_etur?igshid=MzNlNGNkZWQ4Mg==">Vitor Tchunwen</a></p>
+      <p>© 2023 Mix Render Studio - Todos os direitos reservados.</p>
     </div>
 
   </div>
