--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <img src="./Images/FL01.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Cliente:</h5>
-          <h5 class="card-title">Fabiano Raizer Interiores</h5>
+          <h5 class="card-title">Fabiano Raizer</h5>
           <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
           <a href="#projects-id" class="btn btn-primary">Visualizar</a>
         </div>
@@ -148,7 +148,7 @@
         <img src="./Images/FL15.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Cliente:</h5>
-          <h5 class="card-title">Arquiteto Edson Reis</h5>
+          <h5 class="card-title">Arq. Edson Reis</h5>
           <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
           <a href="#projects-id" class="btn btn-primary">Visualizar</a>
         </div>
@@ -158,7 +158,7 @@
         <img src="./Images/FL15.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Cliente:</h5>
-          <h5 class="card-title">Marjana Tortelli</h5>
+          <h5 class="card-title">Arq. Marjana Tortelli</h5>
           <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
           <a href="#projects-id" class="btn btn-primary">Visualizar</a>
         </div>
@@ -167,8 +167,8 @@
       <div class="card">
         <img src="./Images/FL15.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Projeto Autoral:</h5>
-          <h5 class="card-title">Mix Render Studio</h5>
+          <h5 class="card-title">Projetos Autorais:</h5>
+          <h5 class="card-title">Cenas Internas</h5>
           <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
           <a href="#projects-id" class="btn btn-primary">Visualizar</a>
         </div>
@@ -177,8 +177,8 @@
       <div class="card">
         <img src="./Images/FL15.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Projeto Autoral:</h5>
-          <h5 class="card-title">Mix Render Studio</h5>
+          <h5 class="card-title">Projetos Autorais:</h5>
+          <h5 class="card-title">Cenas Externas</h5>
           <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
           <a href="#projects-id" class="btn btn-primary">Visualizar</a>
         </div>
