--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       </div>
 
       <div class="card">
-        <img src="./Images/FL05.png" class="card-img-top" alt="...">
+        <img src="./Images/FINAL 09.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Cliente:</h5>
           <h5 class="card-title">Julia Lavall | Lagum Arq.</h5>
@@ -145,7 +145,7 @@
       </div>
 
       <div class="card">
-        <img src="./Images/FL15.png" class="card-img-top" alt="...">
+        <img src="./Images/01 FINAL QUARTO CASAL ALTERAÇÃO.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Cliente:</h5>
           <h5 class="card-title">Arq. Edson Reis</h5>
@@ -155,7 +155,7 @@
       </div>
 
       <div class="card">
-        <img src="./Images/FL15.png" class="card-img-top" alt="...">
+        <img src="./Images/FINAL 05.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Cliente:</h5>
           <h5 class="card-title">Arq. Marjana Tortelli</h5>
@@ -165,7 +165,7 @@
       </div>
 
       <div class="card">
-        <img src="./Images/FL15.png" class="card-img-top" alt="...">
+        <img src="./Images/ITALIA10.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Projetos Autorais:</h5>
           <h5 class="card-title">Cenas Internas</h5>
@@ -175,7 +175,7 @@
       </div>
 
       <div class="card">
-        <img src="./Images/FL15.png" class="card-img-top" alt="...">
+        <img src="/Images/EDF02.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Projetos Autorais:</h5>
           <h5 class="card-title">Cenas Externas</h5>
