--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       </div>
 
       <div class="card">
-        <img src="/Images/EDF02.png" class="card-img-top" alt="...">
+        <img src="./Images/EDF02.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Projetos Autorais:</h5>
           <h5 class="card-title">Cenas Externas</h5>
