--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <img src="./Images/FL01.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Cliente:</h5>
-          <h5 class="card-title">Fabiano Raizer</h5>
+          <h5 class="card-title">Fabiano Raizer Interiores</h5>
           <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
           <a href="#projects-id" class="btn btn-primary">Visualizar</a>
         </div>
