adicionando projetos nos cards

--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
     <meta property="og:url" content="https://vitoretur.github.io/MixRenderStudio/">
     <meta property="og:image" content="https://i.imgur.com/cKscds8.jpg">
 
-
-
-
     <title>Mix Render Studio</title>
 </head>
 <body>
@@ -101,7 +98,7 @@
     <div class="about-info">
       <div class="info">
         <h2>Conhecimento Técnico Especializado</h2>
-        <p>Nossa equipe domina técnicas avançadas de renderização 3D utilizando ferramentas e softwares de ponta para criar imagens fotorrealistas e envolventes.</p>
+        <p>Nossa equipe domina técnicas avançadas de renderização 3D utilizando ferramentas e softwares de ponta para criar imagens fotorrealistas e envolventes com um profundo conhecimento das últimas tendências e tecnologias em renderização 3D.</p>
       </div>
       <div class="info2">
         <h2>Criatividade Visual</h2>
@@ -109,7 +106,7 @@
       </div>
       <div class="info">
         <h2>Soluções Eficientes e Personalizadas</h2>
-        <p>Nosso objetivo é fornecer resultados encantadores, valorizando ainda mais cada projeto.</p>
+        <p>Nosso objetivo é fornecer resultados encantadores, valorizando ainda mais cada projeto. Acreditamos no poder do design e da tecnologia para transformar ideias em realidade.</p>
       </div>
     </div>
   </div>
@@ -130,7 +127,7 @@
           <h5 class="card-title">Cliente:</h5>
           <h5 class="card-title">Fabiano Raizer Interiores</h5>
           <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-          <a href="#projects-id" class="btn btn-primary">Visualizar</a>
+          <a href="./projetos1.html" target="_blank" class="btn btn-primary">Visualizar</a>
         </div>
       </div>
 
