+ProjetosFabiano 	modified:   index.html 	new file:   projetos/Fabiano/01.png 	new file:   projetos/Fabiano/02.png 	new file:   projetos/Fabiano/03.png 	new file:   projetos/Fabiano/04.png 	new file:   projetos/Fabiano/05.png 	new file:   projetos/Fabiano/06.png 	new file:   projetos/Fabiano/07.png 	new file:   projetos/Fabiano/09.png 	new file:   projetos/Fabiano/11.png 	new file:   projetos/Fabiano/16.png 	new file:   projetos/Fabiano/17.png 	modified:   projetos1.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="about-info">
       <div class="info">
         <h2>Conhecimento Técnico Especializado</h2>
-        <p>Nossa equipe domina técnicas avançadas de renderização 3D utilizando ferramentas e softwares de ponta para criar imagens fotorrealistas e envolventes com um profundo conhecimento das últimas tendências e tecnologias em renderização 3D.</p>
+        <p>Nossa equipe domina técnicas avançadas de renderização 3D utilizando ferramentas e softwares de ponta para criar imagens fotorrealistas e envolventes.</p>
       </div>
       <div class="info2">
         <h2>Criatividade Visual</h2>
