--- a/projetos1.html
+++ b/projetos1.html
@@ -40,14 +40,12 @@
 
     <section>
 
-        <div class="footer-tittle">
-            <h1>Fabiano Raizer Interiores</h1>
+        <div class="portfolio-tittle">
+            <h1>Cliente: Fabiano Raizer Interiores</h1>
           </div>
-
 
         <div class="portfolio-area">
             <div class="portfolio-box">
-
                 <img src="./projetos/Fabiano/FL01.png" class="img-fluid" alt="...">
                 <img src="./projetos/Fabiano/FL02.png" class="img-fluid" alt="...">
                 <img src="./projetos/Fabiano/FL03.png" class="img-fluid" alt="...">
@@ -63,7 +61,17 @@
                 <img src="./projetos/Fabiano/FL13.png" class="img-fluid" alt="...">
                 <img src="./projetos/Fabiano/FL14.png" class="img-fluid" alt="...">
                 <img src="./projetos/Fabiano/FL15.png" class="img-fluid" alt="...">
-
+                <img src="./projetos/Fabiano/01.png" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/02.png" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/03.png" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/04.png" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/05.png" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/06.png" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/07.png" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/09.png" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/11.png" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/16.png" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/17.png" class="img-fluid" alt="...">
             </div>
 
         </div>
