--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <div class="projects-box">
 
       <div class="card">
-        <img src="./Images/FL01.png" class="card-img-top" alt="...">
+        <img src="./projetos/Fabiano/FL09.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Cliente:</h5>
           <h5 class="card-title">Fabiano Raizer Interiores</h5>
