converted png to jpg
	new file:   "Images/01 FINAL QUARTO CASAL ALTERA\303\207\303\203O.jpg"
	deleted:    "Images/01 FINAL QUARTO CASAL ALTERA\303\207\303\203O.png"
	new file:   Images/ARP06.jpg
	deleted:    Images/ARP06.png
	new file:   Images/CNY03.jpg
	deleted:    Images/CNY03.png
	new file:   Images/EDF02.jpg
	deleted:    Images/EDF02.png
	new file:   Images/FINAL 01.jpg
	deleted:    Images/FINAL 01.png
	new file:   Images/FINAL 05.jpg
	deleted:    Images/FINAL 05.png
	deleted:    Images/FINAL 09.png
	deleted:    Images/FL01.png
	deleted:    Images/FL05.png
	new file:   Images/FL15.jpg
	deleted:    Images/FL15.png
	new file:   Images/ITALIA10.jpg
	deleted:    Images/ITALIA10.png
	deleted:    Images/envelope.png
	deleted:    "Images/icons8-avan\303\247ar-100.png"
	deleted:    Images/icons8-voltar-100.png
	modified:   index.html
	new file:   projetos/Fabiano/01.jpg
	deleted:    projetos/Fabiano/01.png
	new file:   projetos/Fabiano/02.jpg
	deleted:    projetos/Fabiano/02.png
	new file:   projetos/Fabiano/03.jpg
	deleted:    projetos/Fabiano/03.png
	new file:   projetos/Fabiano/04.jpg
	deleted:    projetos/Fabiano/04.png
	new file:   projetos/Fabiano/05.jpg
	deleted:    projetos/Fabiano/05.png
	new file:   projetos/Fabiano/06.jpg
	deleted:    projetos/Fabiano/06.png
	new file:   projetos/Fabiano/07.jpg
	deleted:    projetos/Fabiano/07.png
	new file:   projetos/Fabiano/09.jpg
	deleted:    projetos/Fabiano/09.png
	new file:   projetos/Fabiano/11.jpg
	deleted:    projetos/Fabiano/11.png
	new file:   projetos/Fabiano/16.jpg
	deleted:    projetos/Fabiano/16.png
	new file:   projetos/Fabiano/17.jpg
	deleted:    projetos/Fabiano/17.png
	new file:   projetos/Fabiano/FL01.jpg
	deleted:    projetos/Fabiano/FL01.png
	new file:   projetos/Fabiano/FL02.jpg
	deleted:    projetos/Fabiano/FL02.png
	new file:   projetos/Fabiano/FL03.jpg
	deleted:    projetos/Fabiano/FL03.png
	new file:   projetos/Fabiano/FL04.jpg
	deleted:    projetos/Fabiano/FL04.png
	new file:   projetos/Fabiano/F

--- a/projetos1.html
+++ b/projetos1.html
@@ -46,32 +46,32 @@
 
         <div class="portfolio-area">
             <div class="portfolio-box">
-                <img src="./projetos/Fabiano/FL01.png" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL02.png" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL03.png" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL04.png" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL05.png" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL06.png" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL07.png" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL08.png" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL09.png" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL10.png" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL11.png" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL12.png" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL13.png" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL14.png" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL15.png" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/01.png" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/02.png" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/03.png" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/04.png" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/05.png" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/06.png" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/07.png" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/09.png" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/11.png" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/16.png" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/17.png" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/FL01.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/FL02.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/FL03.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/FL04.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/FL05.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/FL06.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/FL07.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/FL08.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/FL09.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/FL10.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/FL11.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/FL12.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/FL13.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/FL14.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/FL15.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/01.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/02.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/03.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/04.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/05.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/06.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/07.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/09.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/11.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/16.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Fabiano/17.jpg" class="img-fluid" alt="...">
             </div>
 
         </div>
