--- a/index.html
+++ b/index.html
@@ -47,21 +47,21 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="./Images/FL15.png" class="d-block w-100" alt="...">
+      <img src="./Images/FL15.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <!-- <h5>First slide label</h5> -->
         <!-- <p>Some representative placeholder content for the first slide.</p> -->
       </div>
     </div>
     <div class="carousel-item">
-      <img src="./Images/ARP06.png" class="d-block w-100" alt="...">
+      <img src="./Images/ARP06.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <!-- <h5>Second slide label</h5> -->
         <!-- <p>Some representative placeholder content for the second slide.</p> -->
       </div>
     </div>
     <div class="carousel-item">
-      <img src="./Images/CNY03.png" class="d-block w-100" alt="...">
+      <img src="./Images/CNY03.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <!-- <h5>Third slide label</h5> -->
         <!-- <p>Some representative placeholder content for the third slide.</p> -->
@@ -122,7 +122,7 @@
     <div class="projects-box">
 
       <div class="card">
-        <img src="./projetos/Fabiano/FL09.png" class="card-img-top" alt="...">
+        <img src="./projetos/Fabiano/FL09.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Cliente:</h5>
           <h5 class="card-title">Fabiano Raizer Interiores</h5>
@@ -132,7 +132,7 @@
       </div>
 
       <div class="card">
-        <img src="./Images/FINAL 01.png" class="card-img-top" alt="...">
+        <img src="./Images/FINAL 01.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Cliente:</h5>
           <h5 class="card-title">Julia Lavall | Lagum Arq.</h5>
@@ -142,7 +142,7 @@
       </div>
 
       <div class="card">
-        <img src="./Images/01 FINAL QUARTO CASAL ALTERAÇÃO.png" class="card-img-top" alt="...">
+        <img src="./Images/01 FINAL QUARTO CASAL ALTERAÇÃO.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Cliente:</h5>
           <h5 class="card-title">Arq. Edson Reis</h5>
@@ -152,7 +152,7 @@
       </div>
 
       <div class="card">
-        <img src="./Images/FINAL 05.png" class="card-img-top" alt="...">
+        <img src="./Images/FINAL 05.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Cliente:</h5>
           <h5 class="card-title">Arq. Marjana Tortelli</h5>
@@ -162,7 +162,7 @@
       </div>
 
       <div class="card">
-        <img src="./Images/ITALIA10.png" class="card-img-top" alt="...">
+        <img src="./Images/ITALIA10.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Projetos Autorais:</h5>
           <h5 class="card-title">Cenas Internas</h5>
@@ -172,7 +172,7 @@
       </div>
 
       <div class="card">
-        <img src="./Images/EDF02.png" class="card-img-top" alt="...">
+        <img src="./Images/EDF02.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Projetos Autorais:</h5>
           <h5 class="card-title">Cenas Externas</h5>
