+projetos Lagum | Edson 	modified:   index.html 	new file:   projetos/Edson/1 (1).jpg 	new file:   projetos/Edson/1 (2).jpg 	new file:   projetos/Edson/1 (3).jpg 	new file:   projetos/Edson/1 (4).jpg 	new file:   projetos/Edson/1 (5).jpg 	new file:   projetos/Edson/1 (6).jpg 	new file:   projetos/Edson/1 (7).jpg 	new file:   projetos/Edson/1 (8).jpg 	new file:   projetos/Edson/1 (9).jpg 	new file:   projetos/Lagum/FINAL 01.jpg 	new file:   projetos/Lagum/FINAL 02.jpg 	new file:   projetos/Lagum/FINAL 03.jpg 	new file:   projetos/Lagum/FINAL 04.jpg 	new file:   projetos/Lagum/FINAL 06.jpg 	new file:   projetos/Lagum/FINAL 07.jpg 	new file:   projetos/Lagum/FINAL 09.jpg 	new file:   projetos/Lagum/FINAL 10.jpg 	new file:   projetos/Lagum/FINAL SALA DE ESTAR 01.jpg 	new file:   projetos2.html 	new file:   projetos3.html

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           <h5 class="card-title">Cliente:</h5>
           <h5 class="card-title">Julia Lavall | Lagum Arq.</h5>
           <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-          <a href="#projects-id" class="btn btn-primary">Visualizar</a>
+          <a href="./projetos2.html" class="btn btn-primary">Visualizar</a>
         </div>
       </div>
 
@@ -147,7 +147,7 @@
           <h5 class="card-title">Cliente:</h5>
           <h5 class="card-title">Arq. Edson Reis</h5>
           <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-          <a href="#projects-id" class="btn btn-primary">Visualizar</a>
+          <a href="./projetos3.html" class="btn btn-primary">Visualizar</a>
         </div>
       </div>
 
