todos os projetos adicionados + fotos + btn scroll

--- a/projetos3.html
+++ b/projetos3.html
@@ -29,9 +29,9 @@
             </div>
             <ul class="nav-list">
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="#about-id">Sobre Nós</a></li>
-                <li><a href="#projects-id">Portfólio</a></li>
-                <li><a href="#contato-id">Contato</a></li>
+                <li><a href="./index.html#about-id">Sobre Nós</a></li>
+                <li><a href="./index.html#projects-id">Portfólio</a></li>
+                <li><a href="./index.html#contato-id">Contato</a></li>
             </ul>
         </nav>
     </header>
@@ -41,7 +41,8 @@
     <section>
 
         <div class="portfolio-tittle">
-            <h1>Cliente: Arquiteto Edson Reis</h1>
+            <h1>Cliente</h1>
+            <h1>Arquiteto Edson Reis</h1>
           </div>
 
         <div class="portfolio-area">
@@ -59,6 +60,10 @@
 
         </div>
     </section>
+
+    <button id="btnTopo" class="btn-topo" aria-label="Voltar ao topo" title="Voltar ao topo">
+        <span class="arrow"></span>
+      </button>
 
 
     <script src="mobile-navbar.js"></script>
