--- a/projetos4.html
+++ b/projetos4.html
@@ -42,37 +42,16 @@
 
         <div class="portfolio-tittle">
             <h1>Cliente</h1>
-            <h1>Fabiano Raizer Interiores</h1>
+            <h1>Arquiteta Marjana Tortelli</h1>
           </div>
 
         <div class="portfolio-area">
             <div class="portfolio-box">
-                <img src="./projetos/Fabiano/FL01.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL02.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL03.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL04.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL05.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL06.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL07.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL08.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL09.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL10.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL11.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL12.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL13.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL14.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL15.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/01.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/02.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/03.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/04.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/05.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/06.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/07.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/09.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/11.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/16.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/17.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Marjana/FINAL 01.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Marjana/FINAL 02.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Marjana/FINAL 03.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Marjana/FINAL 04.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Marjana/FINAL 05.jpg" class="img-fluid" alt="...">
             </div>
 
         </div>
@@ -81,6 +60,7 @@
     <button id="btnTopo" class="btn-topo" aria-label="Voltar ao topo" title="Voltar ao topo">
         <span class="arrow"></span>
       </button>
+
 
     <script src="mobile-navbar.js"></script>
     
