--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
         <div class="card-body">
           <h5 class="card-title">Cliente:</h5>
           <h5 class="card-title">Fabiano Raizer Interiores</h5>
-          <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-          <a href="./projetos1.html" target="_blank" class="btn btn-primary">Visualizar</a>
+
+          <a href="./projetos1.html" class="btn btn-primary">Visualizar</a>
         </div>
       </div>
 
@@ -136,7 +136,7 @@
         <div class="card-body">
           <h5 class="card-title">Cliente:</h5>
           <h5 class="card-title">Julia Lavall | Lagum Arq.</h5>
-          <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+
           <a href="./projetos2.html" class="btn btn-primary">Visualizar</a>
         </div>
       </div>
@@ -146,7 +146,7 @@
         <div class="card-body">
           <h5 class="card-title">Cliente:</h5>
           <h5 class="card-title">Arq. Edson Reis</h5>
-          <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+
           <a href="./projetos3.html" class="btn btn-primary">Visualizar</a>
         </div>
       </div>
@@ -156,8 +156,7 @@
         <div class="card-body">
           <h5 class="card-title">Cliente:</h5>
           <h5 class="card-title">Arq. Marjana Tortelli</h5>
-          <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-          <a href="#projects-id" class="btn btn-primary">Visualizar</a>
+          <a href="./projetos4.html" class="btn btn-primary">Visualizar</a>
         </div>
       </div>
 
@@ -166,8 +165,8 @@
         <div class="card-body">
           <h5 class="card-title">Projetos Autorais:</h5>
           <h5 class="card-title">Cenas Internas</h5>
-          <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-          <a href="#projects-id" class="btn btn-primary">Visualizar</a>
+
+          <a href="./projetos5.html" class="btn btn-primary">Visualizar</a>
         </div>
       </div>
 
@@ -176,8 +175,8 @@
         <div class="card-body">
           <h5 class="card-title">Projetos Autorais:</h5>
           <h5 class="card-title">Cenas Externas</h5>
-          <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-          <a href="#projects-id" class="btn btn-primary">Visualizar</a>
+
+          <a href="./projetos6.html" class="btn btn-primary">Visualizar</a>
         </div>
       </div>
       
@@ -186,6 +185,7 @@
   </section>
   
 <footer>
+
   <div id="contato-id" class="linha"></div>
 
   <div class="footer-tittle">
@@ -206,47 +206,11 @@
 
   </div>
 
-
-
 </footer>
 
-
-
-  <!-- <section class="form-area">
-
-    <div id="contato-id" class="linha"></div>
-
-    <div class="form-tittle">
-      <h1>Contato</h1>
-    </div>
-
-    <div class="form-box">
-      
-      <form
-    action="https://formspree.io/f/moqoaegb"
-    method="POST">
-    <div class="text-name">
-      <label>
-        <input type="text" name="Nome" placeholder="Nome" maxlength="60">
-      </label>
-    </div>
-    <div class="text-name">
-    <label>
-      <input type="email" name="Email" placeholder="E-mail">
-    </label>
-    <label>
-    </div>
-    <div class="text-name">
-      <textarea name="Mensagem" placeholder="Mensagem"></textarea>
-    </label>
-  </div> -->
-    <!-- your other form fields go here -->
-    <!-- <div>
-    <button type="submit">Enviar</button>
-  </div>
-  </form>
-  </div>
-  </section> -->
+<button id="btnTopo" class="btn-topo" aria-label="Voltar ao topo" title="Voltar ao topo">
+  <span class="arrow"></span>
+</button>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="mobile-navbar.js"></script>
