--- a/projetos6.html
+++ b/projetos6.html
@@ -41,38 +41,22 @@
     <section>
 
         <div class="portfolio-tittle">
-            <h1>Cliente</h1>
-            <h1>Fabiano Raizer Interiores</h1>
+            <h1>Projetos Pessoais</h1>
+            <h1>Cenas Externas</h1>
           </div>
 
         <div class="portfolio-area">
             <div class="portfolio-box">
-                <img src="./projetos/Fabiano/FL01.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL02.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL03.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL04.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL05.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL06.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL07.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL08.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL09.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL10.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL11.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL12.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL13.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL14.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/FL15.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/01.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/02.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/03.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/04.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/05.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/06.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/07.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/09.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/11.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/16.jpg" class="img-fluid" alt="...">
-                <img src="./projetos/Fabiano/17.jpg" class="img-fluid" alt="...">
+
+                <img src="./projetos/Exterior/ARP06.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Exterior/EDF01.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Exterior/EDF02.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Exterior/F01.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Exterior/HOLBURN MUSEUM 01.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Exterior/HOLBURN MUSEUM 02.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Exterior/PIS01.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Exterior/PALÁCIO0002.jpg" class="img-fluid" alt="...">
+                
             </div>
 
         </div>
@@ -81,6 +65,7 @@
     <button id="btnTopo" class="btn-topo" aria-label="Voltar ao topo" title="Voltar ao topo">
         <span class="arrow"></span>
       </button>
+
 
     <script src="mobile-navbar.js"></script>
     
