modified:   index.html

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <div id="projects-id" class="linha"></div>
 
 <div class="projects-tittle">
-  <h1>Portfólio</h1>
+  <h1>Alguns de nossos trabalhos</h1>
 </div>
 
   <section>
