--- a/index.html
+++ b/index.html
@@ -47,24 +47,21 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="./Images/FL15.jpg" class="d-block w-100" alt="...">
+      <img src="./Images/FL15.webp" class="d-block w-100" alt="Adega de luxo com detalhes em dourado">
       <div class="carousel-caption d-none d-md-block">
-        <!-- <h5>First slide label</h5> -->
-        <!-- <p>Some representative placeholder content for the first slide.</p> -->
+
       </div>
     </div>
     <div class="carousel-item">
-      <img src="./Images/ARP06.jpg" class="d-block w-100" alt="...">
+      <img src="./Images/ARP06.webp" class="d-block w-100" alt="Cena exterior - Uma piscina com uma bóia">
       <div class="carousel-caption d-none d-md-block">
-        <!-- <h5>Second slide label</h5> -->
-        <!-- <p>Some representative placeholder content for the second slide.</p> -->
+
       </div>
     </div>
     <div class="carousel-item">
-      <img src="./Images/CNY03.jpg" class="d-block w-100" alt="...">
+      <img src="./Images/CNY03.webp" class="d-block w-100" alt="Cozinha preta e branca de alto padrão">
       <div class="carousel-caption d-none d-md-block">
-        <!-- <h5>Third slide label</h5> -->
-        <!-- <p>Some representative placeholder content for the third slide.</p> -->
+
       </div>
     </div>
   </div>
@@ -122,7 +119,7 @@
     <div class="projects-box">
 
       <div class="card">
-        <img src="./projetos/Fabiano/FL09.jpg" class="card-img-top" alt="...">
+        <img src="./Images/FL09.webp" class="card-img-top" alt="Cozinha de alto padrão com detalhes em dourado">
         <div class="card-body">
           <h5 class="card-title">Cliente:</h5>
           <h5 class="card-title">Fabiano Raizer Interiores</h5>
@@ -132,7 +129,7 @@
       </div>
 
       <div class="card">
-        <img src="./Images/FINAL 01.jpg" class="card-img-top" alt="...">
+        <img src="./Images/FINAL-01.webp" class="card-img-top" alt="Imagem de uma casa por fora">
         <div class="card-body">
           <h5 class="card-title">Cliente:</h5>
           <h5 class="card-title">Julia Lavall | Lagum Arq.</h5>
@@ -142,7 +139,7 @@
       </div>
 
       <div class="card">
-        <img src="./Images/01 FINAL QUARTO CASAL ALTERAÇÃO.jpg" class="card-img-top" alt="...">
+        <img src="./Images/01-FINAL-QUARTO-CASAL-ALTERAÇÃO.webp" class="card-img-top" alt="Imagem de um quarto de casal">
         <div class="card-body">
           <h5 class="card-title">Cliente:</h5>
           <h5 class="card-title">Arq. Edson Reis</h5>
@@ -152,7 +149,7 @@
       </div>
 
       <div class="card">
-        <img src="./Images/FINAL 05.jpg" class="card-img-top" alt="...">
+        <img src="./Images/FINAL-05.webp" class="card-img-top" alt="Imagem de uma banheira com vista para as montanhas">
         <div class="card-body">
           <h5 class="card-title">Cliente:</h5>
           <h5 class="card-title">Arq. Marjana Tortelli</h5>
@@ -161,7 +158,7 @@
       </div>
 
       <div class="card">
-        <img src="./Images/ITALIA10.jpg" class="card-img-top" alt="...">
+        <img src="./Images/ITALIA10.webp" class="card-img-top" alt="Imagem de um quarto na Italía com uma vista deslumbrante e um quadro lindo onde mostra 2 estatuas se beijando">
         <div class="card-body">
           <h5 class="card-title">Projetos Autorais:</h5>
           <h5 class="card-title">Cenas Internas</h5>
@@ -171,7 +168,7 @@
       </div>
 
       <div class="card">
-        <img src="./Images/EDF02.jpg" class="card-img-top" alt="...">
+        <img src="./Images/EDF02.webp" class="card-img-top" alt="Imagens de um edificio">
         <div class="card-body">
           <h5 class="card-title">Projetos Autorais:</h5>
           <h5 class="card-title">Cenas Externas</h5>
@@ -195,8 +192,8 @@
   <div class="footer-area">
 
     <div class="footer-box">
-      <a target="_blank" href="https://wa.me/5547992565917" class="btn btn-primary"><img src="./Images/whatsapp.png">Fale com a gente no Whatsapp</a>
-      <a target="_blank" href="mailto:mixrenderstudio@gmail.com" class="btn btn-primary"><img src="./Images/email.png">Envie o seu arquivo por e-mail</a>
+      <a target="_blank" href="https://wa.me/5547992565917" class="btn btn-primary"><img src="./Images/whatsapp.png" alt="botão que redireciona para o whatsapp">Fale com a gente no Whatsapp</a>
+      <a target="_blank" href="mailto:mixrenderstudio@gmail.com" class="btn btn-primary"><img src="./Images/email.png" alt="botão que redireciona para enviar e-mail">Envie o seu arquivo por e-mail</a>
     </div>
 
     <div class="copyright">
