+Acessibilidade 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
   <div class="btn-top">
 
-    <a target="_blank" href="https://wa.me/5547992565917" class="btn btn-primary"><img src="./Images/whatsapp.png">Fale com a gente no Whatsapp</a>
+    <a target="_blank" href="https://wa.me/5547992565917" class="btn btn-primary"><img src="./Images/whatsapp.png" alt="botão que redireciona para o whatsapp">Fale com a gente no Whatsapp</a>
 
   </div>
 
