--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="./Images/logo.png">
 
+    <meta name="description" content="Renderizamos seu projeto com imagens realistas!" />
+
     <meta property="og:title" content="Mix Render Studio">
     <meta property="og:description" content="Valorizamos seu projeto com imagens realistas!">
     <meta property="og:url" content="https://vitoretur.github.io/MixRenderStudio/">
