add 360° images + card 	new file:   360.html 	new file:   360/360 EM PNG.png 	new file:   360/360P.png 	new file:   360/360QMM01.png 	new file:   360/QBB3601.png 	modified:   index.html 	new file:   projetos/Interior/1.webp 	new file:   projetos360.html 	modified:   projetos5.html 	modified:   styles.css 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -178,8 +178,21 @@
           <a href="./projetos6.html" class="btn btn-primary">Visualizar</a>
         </div>
       </div>
+
+      <div class="card mb-3">
+        <img src="./projetos/Interior/1.webp" class="card-img-top" alt="Imagens de um edificio">
+        <div class="card-body">
+          <h5 class="card-title">Ambientes em 360°</h5>
+          <!-- <h6 class="card-title">Cenas</h6> -->
+
+          <a href="./projetos360.html" class="btn btn-primary">Visualizar</a>
+        </div>
+      </div>
       
     </div>
+
+
+    
 
   </section>
   
