--- a/projetos5.html
+++ b/projetos5.html
@@ -48,7 +48,7 @@
         <div class="portfolio-area">
             <div class="portfolio-box">
 
-                <img src="./projetos/Interior/1.jpg" class="img-fluid" alt="...">
+                <img src="./projetos/Interior/1.webp" class="img-fluid" alt="...">
                 <img src="./projetos/Interior/2.jpg" class="img-fluid" alt="...">
                 <img src="./projetos/Interior/3.jpg" class="img-fluid" alt="...">
                 <img src="./projetos/Interior/4.jpg" class="img-fluid" alt="...">
