--- a/projetos360.html
+++ b/projetos360.html
@@ -31,8 +31,8 @@
         }
 
         .panorama-thumbnail {
-            width: 100%;
-            height: 30vh;
+            width: 300px;
+            height: 200px;
             margin: 0px 5px;
             cursor: pointer;
             border-radius: 5px;
