--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
   <div class="carousel-inner">
-    <div class="carousel-item active">
+    <div class="carousel-item active" data-bs-interval="2500">
       <img src="./Images/FL15.webp" class="d-block w-100" alt="Adega de luxo com detalhes em dourado">
       <div class="carousel-caption d-none d-md-block">
 
       </div>
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item" data-bs-interval="2500">
       <img src="./Images/ARP06.webp" class="d-block w-100" alt="Cena exterior - Uma piscina com uma bóia">
       <div class="carousel-caption d-none d-md-block">
 
       </div>
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item" data-bs-interval="2500">
       <img src="./Images/CNY03.webp" class="d-block w-100" alt="Cozinha preta e branca de alto padrão">
       <div class="carousel-caption d-none d-md-block">
 
