--- a/projetos360.html
+++ b/projetos360.html
@@ -68,8 +68,20 @@
         }
 
         @media (max-width: 780px) {
+
+        .panorama-thumbnail {
+            width: 100%;
+            height: 200px;
+            margin: 0px 5px;
+            cursor: pointer;
+            border-radius: 5px;
+            background-size: cover;
+            background-position: center;
+            border: 1px solid #6e6d28;
+        }
+   
             
-            #panorama {
+        #panorama {
             width: 100%;
             height: 75vh;
         }
