pequenas mudanças e convertimento para webp.

--- a/projetos360.html
+++ b/projetos360.html
@@ -97,6 +97,10 @@
             border: 5px solid #DEB887;
         }
 
+        .panorama-thumbnail:hover {
+            transform: none;
+        }
+
         }
 
         </style>
