--- a/index.html
+++ b/index.html
@@ -111,6 +111,14 @@
   </div>
 </section>
 
+<div class="linha"></div>
+
+<div class="services-box">
+  <h1 class="projects-tittle">Serviços que oferecemos</h1>
+  <p>⭑ Imagens Renderizadas</p>
+  <p>⭑ Imagens Experiências 360°</p>
+</div>
+
 <div id="projects-id" class="linha"></div>
 
 <div class="projects-tittle">
@@ -208,7 +216,7 @@
   <div class="footer-area">
 
     <div class="footer-box">
-      <a target="_blank" href="https://wa.me/5547992565917" class="btn btn-primary"><img src="./Images/whatsapp.png" alt="botão que redireciona para o whatsapp">Fale com a gente no Whatsapp</a>
+      <a target="_blank" href="https://api.whatsapp.com/send?phone=5547992565917&text=Desejo%20solicitar%20um%20or%C3%A7amento!" class="btn btn-primary"><img src="./Images/whatsapp.png" alt="botão que redireciona para o whatsapp">Fale com a gente no Whatsapp</a>
       <a target="_blank" href="mailto:mixrenderstudio@gmail.com" class="btn btn-primary"><img src="./Images/email.png" alt="botão que redireciona para enviar e-mail">Envie o seu arquivo por e-mail</a>
     </div>
 
