--- a/projetos3.html
+++ b/projetos3.html
@@ -72,7 +72,7 @@
         <div class="footer-area">
       
           <div class="footer-box">
-            <a target="_blank" href="https://wa.me/5547992565917" class="btn btn-primary"><img src="./Images/whatsapp.png" alt="botão que redireciona para o whatsapp">Fale com a gente no Whatsapp</a>
+            <a target="_blank" href="https://api.whatsapp.com/send?phone=5547992565917&text=Desejo%20solicitar%20um%20or%C3%A7amento!" class="btn btn-primary"><img src="./Images/whatsapp.png" alt="botão que redireciona para o whatsapp">Fale com a gente no Whatsapp</a>
             <a target="_blank" href="mailto:mixrenderstudio@gmail.com" class="btn btn-primary"><img src="./Images/email.png" alt="botão que redireciona para enviar e-mail">Envie o seu arquivo por e-mail</a>
           </div>
       
