--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"> -->
@@ -89,7 +89,7 @@
   </div>
 
   <div  class="about-tittle">
-    <h1>Sobre Nós</h1>
+    <h1>Sobre nós</h1>
     <p>Valorizamos três pilares fundamentais que nos diferenciam e garantem resultados excepcionais para nossos clientes.</p>
   </div>
 
@@ -111,12 +111,12 @@
   </div>
 </section>
 
-<div class="linha"></div>
-
 <div class="services-box">
-  <h1 class="projects-tittle">Serviços que oferecemos</h1>
-  <p>⭑ Imagens Renderizadas</p>
-  <p>⭑ Imagens Experiências 360°</p>
+  <h1 class="services-tittle">Nossos serviços</h1>
+  <div class="services-box-p">
+    <p>• Imagens renderizadas</p>
+    <p>• Imagens experiência 360°</p>
+</div>
 </div>
 
 <div id="projects-id" class="linha"></div>
