--- a/projetos5.html
+++ b/projetos5.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"> -->
@@ -65,7 +65,7 @@
     <section>
 
         <div class="portfolio-tittle">
-            <h1>Projetos Pessoais</h1>
+            <h1>Projetos autorais</h1>
             <h1>Cenas internas</h1>
           </div>
 
