--- a/projetos6.html
+++ b/projetos6.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"> -->
@@ -41,8 +41,8 @@
     <section>
 
         <div class="portfolio-tittle">
-            <h1>Projetos Pessoais</h1>
-            <h1>Cenas Externas</h1>
+            <h1>Projetos autorais</h1>
+            <h1>Cenas externas</h1>
           </div>
 
         <div class="portfolio-area">
