--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <ul class="nav-list">
             <li><a href="#">Home</a></li>
             <li><a href="#about-id">Sobre Nós</a></li>
-            <li><a href="#projects-id">Portfólio</a></li>
+            <li><a href="#projects-id2">Portfólio</a></li>
             <li><a href="#contato-id">Contato</a></li>
         </ul>
     </nav>
@@ -121,7 +121,7 @@
 
 <div id="projects-id" class="linha"></div>
 
-<div class="projects-tittle">
+<div id="projects-id2" class="projects-tittle">
   <h1>Alguns de nossos trabalhos</h1>
 </div>
 
@@ -129,7 +129,7 @@
     <div class="projects-box">
 
       <div class="card mb-3">
-        <img src="./projetos/Interior/1.webp" class="card-img-top" alt="Imagens de um edificio">
+        <img src="./projetos/Interior/43.webp" class="card-img-top" alt="Imagens de um edificio">
         <div class="card-body">
           <h5 class="card-title">Ambientes em 360°</h5>
           <!-- <h6 class="card-title">Cenas</h6> -->
