redirecionamento de e-mail

--- a/projetos6.html
+++ b/projetos6.html
@@ -74,7 +74,7 @@
     
         <div class="footer-box">
           <a target="_blank" href="https://api.whatsapp.com/send?phone=5547992565917&text=Desejo%20solicitar%20um%20or%C3%A7amento!" class="btn btn-primary"><img src="./Images/whatsapp.png" alt="botão que redireciona para o whatsapp">Fale com a gente no Whatsapp</a>
-          <a target="_blank" href="mailto:mixrenderstudio@gmail.com" class="btn btn-primary"><img src="./Images/email.png" alt="botão que redireciona para enviar e-mail">Envie o seu arquivo por e-mail</a>
+          <a target="_blank" href="mailto:vitor@mixrender.com" class="btn btn-primary"><img src="./Images/email.png" alt="botão que redireciona para enviar e-mail">Envie o seu arquivo por e-mail</a>
           <a target="_blank" href="https://www.instagram.com/mixrender3d/" class="btn btn-primary"><img src="./Images/instagram.png" alt="botão que redireciona para enviar e-mail">Acesse nosso Instagram</a>
         </div>
     
