--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,600;1,100;1,200;1,400;1,600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="icon" type="image/png" href="./Images/logo.png">
+    <link rel="icon" type="image/png" href="./Images/logo - Copia.png">
 
     <meta name="description" content="Renderizamos seu projeto com imagens realistas!" />
 
-    <meta property="og:title" content="Mix Render Studio">
-    <meta property="og:description" content="Valorizamos seu projeto com imagens realistas!">
-    <meta property="og:url" content="https://vitoretur.github.io/MixRenderStudio/">
-    <meta property="og:image" content="https://i.imgur.com/cKscds8.jpg">
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Mix Render Studio"/>
+    <meta property="og:description" content="Valorizamos seu projeto com imagens realistas!"/>
+    <meta property="og:image:type" content="image/jpeg"/>
+    <meta property="og:url" content="https://mixrender.com/"/>
+    <meta property="og:image" content="https://i.imgur.com/cKscds8.jpg"/>
 
     <title>Mix Render Studio</title>
 </head>
