--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta property="og:description" content="Valorizamos seu projeto com imagens realistas!"/>
     <meta property="og:image:type" content="image/jpeg"/>
     <meta property="og:url" content="https://mixrender.com/"/>
-    <meta property="og:image" content="https://i.imgur.com/cKscds8.jpg"/>
+    <meta property="og:image" content="https://i.imgur.com/mOPoqzt.jpg"/>
 
     <title>Mix Render Studio</title>
 </head>
@@ -100,27 +100,34 @@
 
   </div>
 
-  <div  class="about-tittle">
-    <h1>Sobre nós</h1>
-    <p>Valorizamos três pilares fundamentais que nos diferenciam e garantem resultados excepcionais para nossos clientes.</p>
-  </div>
+
+  <div id="about-id" class="linha5"></div>
 
   <div class="about-box">
     <div class="about-info">
+      <div  class="about-tittle">
+        <h1>Sobre nós</h1>
+      </div>
       <div class="info">
-        <h2>Conhecimento Técnico Especializado</h2>
+
         <p>Nossa equipe domina técnicas avançadas de renderização 3D utilizando ferramentas e softwares de ponta para criar imagens fotorrealistas e envolventes.</p>
       </div>
-      <div class="info2">
+      <!-- <div class="info2">
         <h2>Criatividade Visual</h2>
         <p>Unimos habilidades artísticas com expertise técnica para produzir imagens impressionantes. Com uma abordagem cuidadosa encaramos cada projeto como um desafio único, buscando soluções criativas e adaptadas às necessidades específicas dos clientes.</p>
-      </div>
+      </div> -->
       <div class="info">
-        <h2>Soluções Eficientes e Personalizadas</h2>
-        <p>Nosso objetivo é fornecer resultados encantadores, valorizando ainda mais cada projeto. Acreditamos no poder do design e da tecnologia para transformar ideias em realidade.</p>
+        <p>Com uma abordagem cuidadosa encaramos cada projeto como um desafio único, nosso objetivo é fornecer resultados encantadores, valorizando ainda mais cada projeto. Acreditamos no poder do design e da tecnologia para transformar ideias em realidade.</p>
       </div>
     </div>
+
+    <div class="about-img">
+      <img src="./projetos/Interior/03.webp" class="img-about" alt="...">
+    </div>
   </div>
+
+
+
 </section>
 
 <div class="services-box">
