--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
       </div>
       <div class="info">
 
-        <p>Nossa equipe domina técnicas avançadas de renderização 3D utilizando ferramentas e softwares de ponta para criar imagens fotorrealistas e envolventes.</p>
+        <p>Nossa equipe domina técnicas avançadas de renderização 3D, utilizando ferramentas e softwares de ponta para criar imagens fotorrealistas e envolventes.</p>
       </div>
       <!-- <div class="info2">
         <h2>Criatividade Visual</h2>
         <p>Unimos habilidades artísticas com expertise técnica para produzir imagens impressionantes. Com uma abordagem cuidadosa encaramos cada projeto como um desafio único, buscando soluções criativas e adaptadas às necessidades específicas dos clientes.</p>
       </div> -->
       <div class="info">
-        <p>Com uma abordagem cuidadosa encaramos cada projeto como um desafio único, nosso objetivo é fornecer resultados encantadores, valorizando ainda mais cada projeto. Acreditamos no poder do design e da tecnologia para transformar ideias em realidade.</p>
+        <p>Com uma abordagem cuidadosa, encaramos cada projeto como um desafio único. Nosso objetivo é fornecer resultados encantadores, valorizando ainda mais cada projeto. Acreditamos no poder do design e da tecnologia para transformar ideias em realidade.</p>
       </div>
     </div>
 
